# API_Bancaria

./: README.md  pyproject.toml
src/: config.py  database.py  security.py
src/services/: account.py
